<resources>
    <string name="app_name">MyTrips</string>
    <string name="signIn">Already have an account?</string>
    <string name="etName">Name</string>
    <string name="etPass">Password</string>
    <string name="ShowPass">show password</string>
    <string name="btnLogIn">Sign-in</string>
    <string name="txt">--------------- Create new account ---------------</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="etEmail">Your email address</string>
    <string name="etPassReg">Create a password</string>
    <string name="RegistrationTxt">Create new account</string>
    <string name="EmailSign">Email</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="project_name">Trip Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>

    <string name="tvNewTrip">Add new trip</string>
    <string name="etTripName">Trip name</string>
    <string name="startPoint">start point</string>
    <string name="endPoint">end point</string>
    <string name="tvDetails">Start Details</string>
    <string name="btnAdd">Add Trip</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string-array name="repetitions">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
    </string-array>
    <string-array name="tripType">
        <item>one Way Trip</item>
        <item>Round Trip</item>
    </string-array>
    <string name="tvName">Trip Name</string>
    <string name="etStartPoint">StartPoint</string>
    <string name="etEndPoint">End Point</string>
    <string name="tvDate">Date: </string>
    <string name="tvTime">Time: </string>
    <string name="btnEdit">Save</string>
    <string name="tvNotes">Notes</string>
    <string name="etAddNotes">Add Notes</string>
    <string name="btnSave">Save</string>
    <string name="title_activity_alert_dialog">dialog</string>
    <string name="tvRepeate">Repeatition</string>
    <string name="tvType">Trip Type</string>
</resources>